[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wild-agent"
version = "0.2.0"
description = "Multi-agent data collection system using LangChain and LangGraph"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Wild Agent Team"}
]
keywords = ["llm", "agents", "langchain", "langgraph", "data-collection", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "crawl4ai>=0.2.0",
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "langchain-community>=0.4.2",
]

[project.optional-dependencies]
providers = [
    "langchain-xai>=0.2.0",
    "langchain-anthropic>=0.2.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.scripts]
wild-agent = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
